# stm32g4-flash-programmer

./: .gitignore  .markdownlint-cli2.yaml  Cargo.toml  Makefile  PROJECT_ACHIEVEMENTS.md  PROJECT_STATUS_REPORT.md  PROJECT_SUMMARY.md  README.md  commitlint.config.cjs  lefthook.yml  package-lock.json  package.json  script.js  test-ci.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  dependencies.yml  release.yml
docs/: ARCHITECTURE.md  USAGE_GUIDE.md  development.md
examples/flash-content-generator/: CUSTOM_FONTS_README.md  FINAL_SUMMARY.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  STM32_FONT_USAGE.md  WEB_APP_UPDATE_SUMMARY.md  font_tools.py  generate_firmware.py
examples/flash-content-generator/assets/: memory_map.txt  resource_layout.json
examples/flash-content-generator/assets/font_output/: font_bitmap_12px_info.txt  font_bitmap_16px_info.txt
examples/flash-content-generator/tools/: algorithmic_font_generator.py  analyze_font.py  c_array_font_converter.py  convert_svg_to_rgb565.py  custom_font_generator.py  flash_composer.py  font_converter.py  font_viewer.py  resource_manager.py  verify_fonts_in_flash.py
examples/flash-content-generator/web-app/: README.md  index.html  script.js  start_server.py
examples/stm32g431-w25q128jv/: Cargo.toml  FLASH_PROGRAMMING_GUIDE.md  IMPLEMENTATION_SUMMARY.md  README.md  demo_output.md  program_flash.sh
examples/stm32g431-w25q128jv/.cargo/: config.toml
examples/stm32g431-w25q128jv/assets/: resource_layout.json
examples/stm32g431-w25q128jv/assets/font_output/: font_info.txt
examples/stm32g431-w25q128jv/src/: main.rs
examples/stm32g431-w25q128jv/src/hardware/: display.rs  flash.rs  mod.rs  spi_bus.rs
examples/stm32g431-w25q128jv/src/resources/: boot_screen_loader.rs  cache.rs  font_parser.rs  font_renderer_16px.rs  image_parser.rs  layout.rs  mod.rs
examples/stm32g431-w25q128jv/src/ui/: app.rs  font_viewer.rs  image_viewer.rs  mod.rs
examples/stm32g431-w25q128jv/tools/: analyze_font.py  check_flash_address.py  flash_composer.py  font_converter.py  resource_manager.py
examples/w25q128jv/: README.md
examples/w25q128jv/assets/: memory_map.txt
examples/w25q128jv/assets/font_output/: font_info.txt
examples/w25q128jv/tools/: svg_to_rgb565.py
firmware/: Cargo.toml  Embed.toml  memory.x
firmware/.cargo/: config.toml
firmware/src/: flash_driver.rs  hardware_crc.rs  main.rs  main_basic.rs  main_complete.rs  main_debug.rs  main_embassy_example.rs  main_flash.rs  main_latest.rs  main_minimal.rs  main_minimal_echo.rs  main_protocol.rs  main_rtt_test.rs  main_simple.rs  main_simple_echo.rs  main_simple_no_defmt.rs  main_test.rs  main_usb_ucpd.rs  main_with_flash.rs  main_working.rs  protocol_handler.rs  safe_flash.rs  usb_cdc.rs
flash_programmer/: Cargo.toml  README.md  flash_programmer_buffer.py  memory.x  program_16mb_flash.py  simple_test.py
flash_programmer/.cargo/: config.toml
flash_programmer/src/: flash_buffer.rs  main.rs  programmer.rs
flash_test_image/: Cargo.toml  memory.x
flash_test_image/.cargo/: config.toml
flash_test_image/src/: main.rs
host-tool/: Cargo.toml  README.md
host-tool/src/: commands.rs  main.rs  serial.rs
protocol/: Cargo.toml
protocol/src/: lib.rs
scripts/: setup-dev-env.sh
tools/: generate_test_image.py  png_to_bitmap_python.py  png_to_bitmap_real.rs  simple_flash_tool.py  verify_flash_image.py
web-app/: README.md  script.js
